<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <View android:layout_width="fill_parent" android:layout_height="10.0dip" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autofill_profile_editor_heading" />
            <View android:layout_width="fill_parent" android:layout_height="12.0dip" />
            <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1" android:shrinkColumns="1"
              xmlns:android="http://schemas.android.com/apk/res/android">
                <TableRow>
                    <TextView android:text="@string/autofill_profile_editor_name" style="@style/AutofillProfileTextView" />
                    <EditText android:id="@id/autofill_profile_editor_name_edit" android:inputType="textPersonName|textCapWords" style="@style/AutofillProfileEditText" />
                </TableRow>
                <TableRow>
                    <TextView android:text="@string/autofill_profile_editor_company_name" style="@style/AutofillProfileTextView" />
                    <EditText android:id="@id/autofill_profile_editor_company_name_edit" android:inputType="textCapWords" style="@style/AutofillProfileEditText" />
                </TableRow>
                <TableRow>
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dip"
                      xmlns:android="http://schemas.android.com/apk/res/android">
                        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autofill_profile_editor_address_line_1" />
                        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autofill_profile_editor_address_line_1_hint" />
                    </LinearLayout>
                    <EditText android:id="@id/autofill_profile_editor_address_line_1_edit" android:inputType="textCapWords" style="@style/AutofillProfileEditText" />
                </TableRow>
                <TableRow>
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dip"
                      xmlns:android="http://schemas.android.com/apk/res/android">
                        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autofill_profile_editor_address_line_2" />
                        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autofill_profile_editor_address_line_2_hint" />
                    </LinearLayout>
                    <EditText android:id="@id/autofill_profile_editor_address_line_2_edit" android:inputType="textCapWords" style="@style/AutofillProfileEditText" />
                </TableRow>
                <TableRow>
                    <TextView android:text="@string/autofill_profile_editor_city" style="@style/AutofillProfileTextView" />
                    <EditText android:id="@id/autofill_profile_editor_city_edit" android:inputType="textCapWords" style="@style/AutofillProfileEditText" />
                </TableRow>
                <TableRow>
                    <TextView android:text="@string/autofill_profile_editor_state" style="@style/AutofillProfileTextView" />
                    <EditText android:id="@id/autofill_profile_editor_state_edit" android:inputType="textCapWords" style="@style/AutofillProfileEditText" />
                </TableRow>
                <TableRow>
                    <TextView android:text="@string/autofill_profile_editor_zip_code" style="@style/AutofillProfileTextView" />
                    <EditText android:id="@id/autofill_profile_editor_zip_code_edit" android:inputType="textCapCharacters" style="@style/AutofillProfileEditText" />
                </TableRow>
                <TableRow>
                    <TextView android:text="@string/autofill_profile_editor_country" style="@style/AutofillProfileTextView" />
                    <EditText android:id="@id/autofill_profile_editor_country_edit" android:inputType="textCapWords" style="@style/AutofillProfileEditText" />
                </TableRow>
                <TableRow>
                    <TextView android:text="@string/autofill_profile_editor_phone_number" style="@style/AutofillProfileTextView" />
                    <EditText android:id="@id/autofill_profile_editor_phone_number_edit" android:phoneNumber="true" style="@style/AutofillProfileEditText" />
                </TableRow>
                <TableRow>
                    <TextView android:text="@string/autofill_profile_editor_email_address" style="@style/AutofillProfileTextView" />
                    <EditText android:id="@id/autofill_profile_editor_email_address_edit" android:inputType="textEmailAddress" android:imeOptions="actionDone|flagNoExtractUi" style="@style/AutofillProfileEditText" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>