<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:paddingLeft="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/dialog_title" android:background="?android:selectableItemBackground" android:paddingTop="12.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit" />
    </LinearLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:id="@id/add_divider" android:background="?android:dividerVertical" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:id="@id/titleText" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" />
            <EditText android:textAppearance="?android:textAppearanceMedium" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:selectAllOnFocus="true" android:maxLength="64" android:inputType="textCapSentences" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:id="@id/addressText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/location" />
            <EditText android:textAppearance="?android:textAppearanceMedium" android:id="@id/address" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/http" android:selectAllOnFocus="true" android:inputType="textUri" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:id="@id/add_divider" android:background="?android:dividerVertical" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:attr/buttonBarStyle">
            <Button android:layout_gravity="right" android:id="@id/cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/do_not_save" android:maxLines="2" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
            <Button android:layout_gravity="left" android:id="@id/OK" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/save" android:maxLines="2" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>